--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Education</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Project</a></li>
+          <li><a href="#Skills" onclick="toggleMenu()">Skills</a></li>
+          <li><a href="#project" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -266,8 +267,8 @@
         <div class="carousel-item">
           <img src="./assets/project 2.png" class="d-block w-100" alt="Project Pic">
           <div class="carousel-caption d-md-block">
-            <h5>Responsive Coffee Shop Site</h5>
-            <p>Built this responsive website using HTML, CSS and JavaScript.</p>
+            <h5 class="text-md">Responsive Coffee Shop Site</h5>
+            <p class="text-md">Built this responsive website using HTML, CSS and JavaScript.</p>
             <div class="slider-btn">
               <button class="btn" onclick="window.open('https://severussingh.github.io/coffee.github.io/', '_blank')">Preview</button>
             </div>
