--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -17,7 +18,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Education</a></li>
           <li><a href="#Skills">Skills</a></li>
-          <li><a href="#project">Projects</a></li>
+          <li><a href="#protfolio">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -230,60 +231,41 @@
   </div>
   </section>
 
-  <section id="project" class="animated">
+  <section id="protfolio" class="protfolio animated">
     <p class="section__text__p1">Get To Know More</p>
     <h1 class="title">PROJECTS</h1>
-    <div id="carouselExampleCaptions" class="carousel slide">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="portfolio-container">
+      <div class="portfolio-box">
+        <img src="assets/project 1.png" alt="">
+        <div class="portfolio-layer">
+          <h4>Netflix-Clone</h4>
+          <p>Built this project using React features like UseEffect, UseState,
+            Axios, GET API, react-youtube, asyn function, Props, Components,
+            JSX.</p>
+          <i id="netflix-clone-icon" class="fa-solid fa-up-right-from-square"></i>
+        </div>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./assets/project 1.png" class="d-block w-100 blur" alt="Project Pic">
-          <div class="carousel-caption  d-md-block">
-            <h5 class="text-md">Netflix Clone</h5>
-            <p class="text-md">Built this project using React features like UseEffect, UseState,
-              Axios, GET API, react-youtube, asyn function, Props, Components,
-              JSX.</p>
 
-            <div class="slider-btn">
-              <button class="btn" onclick="window.open('https://severussingh.github.io/netflix-clone/', '_blank')">Preview</button>
-            </div>
-          </div>
+      <div class="portfolio-box">
+        <img src="assets/project 2.png" alt="">
+        <div class="portfolio-layer">
+          <h4>Coffee Shop Site</h4>
+          <p>Built this responsive website using HTML, CSS and JavaScript.</p>
+          <i id="coffee-shop-icon" class="fa-solid fa-up-right-from-square"></i>
         </div>
-        <div class="carousel-item">
-          <img src="./assets/project 3.png" class="d-block w-100" alt="Project Pic">
-          <div class="carousel-caption d-md-block">
-            <h5 class="text-md">Movies Finder</h5>
-            <p class="text-md">Built this project using React Core features like States, Useeffect,
-              JSX, Props, Components, React Router DOM e.t.c .</p>
-            <div class="slider-btn">
-              <button class="btn" onclick="window.open('https://severussingh.github.io/Movie-Finder/', '_blank')">Preview</button>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./assets/project 2.png" class="d-block w-100" alt="Project Pic">
-          <div class="carousel-caption d-md-block">
-            <h5 class="text-md">Responsive Coffee Shop Site</h5>
-            <p class="text-md">Built this responsive website using HTML, CSS and JavaScript.</p>
-            <div class="slider-btn">
-              <button class="btn" onclick="window.open('https://severussingh.github.io/coffee.github.io/', '_blank')">Preview</button>
-            </div>
-          </div>
-        </div>        
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>   
+
+      <div class="portfolio-box">
+        <img src="assets/project 3.png" alt="">
+        <div class="portfolio-layer">
+          <h4>Movies-Finder</h4>
+          <p>Built this project using React Core features like States, Useeffect,
+            JSX, Props, Components, React Router DOM e.t.c .</p>
+          <i id="Movie-Finder-icon" class="fa-solid fa-up-right-from-square"></i>
+        </div>
+      </div>
     </div>
+    
   </section>
 
 
@@ -316,7 +298,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#Skills">Skills</a></li>
-          <li><a href="#project">Projects</a></li>
+          <li><a href="#protfolio">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
