--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       <div class="nav-links-container">
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#experience">Education</a></li>
           <li><a href="#Skills">Skills</a></li>
           <li><a href="#protfolio">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
